Bug 1325486 - TFBufferMode defaults to INTERLEAVED, and UniformMatrix's transpose arg should be passed to GL. - r=daoshengmu a=lizzard

MozReview-Commit-ID: 7yc2u0GQDnr